# SG-Tester

./: Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
data/: config.yaml
deployment/: dockerfile
src/: arg_getters.rs  boundaries.rs  cli.rs  command_dispatcher.rs  helpers.rs  main.rs  specs.rs  vcf_config.rs  vcf_parser.rs  write_planner.rs
src/vcf_config/: mod.rs  vcf_filter.rs  vcf_format.rs  vcf_header_field.rs  vcf_info.rs
src/vcf_parser/: mod.rs
